fixed anchor alignment

--- a/src/main/webapp/src/app/simple-java-mail-app.less
+++ b/src/main/webapp/src/app/simple-java-mail-app.less
@@ -336,8 +336,16 @@ footer {
   color: #999;
   padding-right: 10px;
   display: block;
-  font-size: 32px;
   text-decoration: none;
+  line-height: normal;
+}
+
+.section-link.h2 {
+  font-size: 32px;
+}
+
+.section-link.h3 {
+  font-size: 20px;
 }
 
 .section-link:hover {
